--- a/Playground_Series_Season_3,_Episode_4.ipynb
+++ b/Playground_Series_Season_3,_Episode_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Q7iMw0OdUXzbCjxRpvMa",
+      "authorship_tag": "ABX9TyOGdZkF8CNwkQy9gS1GjBik",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -996,13 +996,13 @@
       "cell_type": "code",
       "source": [
         "from xgboost import XGBClassifier\n",
-        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
         "from sklearn.model_selection import cross_val_score, KFold"
       ],
       "metadata": {
         "id": "foJA6yEUAy00"
       },
-      "execution_count": 162,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -1128,6 +1128,289 @@
           "text": [
             "100% 2.81M/2.81M [00:00<00:00, 4.75MB/s]\n",
             "Successfully submitted to Playground Series Season 3, Episode 4"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####LGBMC Classifier"
+      ],
+      "metadata": {
+        "id": "YFm1Bu1qZokk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import StratifiedKFold, RandomizedSearchCV\n",
+        "from lightgbm import LGBMClassifier"
+      ],
+      "metadata": {
+        "id": "x4sTHZXzQYy3"
+      },
+      "execution_count": 183,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train = pd.read_csv('train.csv')\n",
+        "test = pd.read_csv('test.csv')"
+      ],
+      "metadata": {
+        "id": "Mne-HeZnRFpI"
+      },
+      "execution_count": 199,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = train.drop(['id', 'Time', 'Class'], axis=1)\n",
+        "y = train.Class"
+      ],
+      "metadata": {
+        "id": "meQ7ezeQRev0"
+      },
+      "execution_count": 200,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = RS.fit_transform(X)\n",
+        "x_test = RS.fit_transform(test.drop(['id', 'Time'], axis=1))"
+      ],
+      "metadata": {
+        "id": "xgSNldY-Rw9l"
+      },
+      "execution_count": 201,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SKF = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)"
+      ],
+      "metadata": {
+        "id": "dDeEpQ4OSiI3"
+      },
+      "execution_count": 182,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def score(clf, x, y):\n",
+        "    return roc_auc_score(y, clf.predict_proba(x)[:,1])"
+      ],
+      "metadata": {
+        "id": "hb8OXewFT7Ry"
+      },
+      "execution_count": 188,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "LGBM_pred = []\n",
+        "LGBM_val_pred = []\n",
+        "scores = []\n",
+        "\n",
+        "for train_i, test_i in SKF.split(X, y):\n",
+        "\n",
+        "  X_train, X_test = X[train_i], X[test_i]\n",
+        "  y_train, y_test = y[train_i], y[test_i]\n",
+        "\n",
+        "  params={'objective': 'binary',\n",
+        "             'metric': 'auc',\n",
+        "             'lambda_l1': 1.0050418664783436e-08, \n",
+        "             'lambda_l2': 9.938606206413121,\n",
+        "             'scale_pos_weight': 1,\n",
+        "             'num_leaves': 44,\n",
+        "             'feature_fraction': 0.8247273276668773,\n",
+        "             'bagging_fraction': 0.5842711778104962,\n",
+        "             'bagging_freq': 6,\n",
+        "             'min_data_in_leaf': 134,\n",
+        "             'min_child_samples': 70,\n",
+        "             'max_depth': 8,\n",
+        "             'num_iterations': 300,\n",
+        "             'learning_rate':0.05}\n",
+        "\n",
+        "  model = LGBMClassifier(**params)\n",
+        "  model.fit(X_train, y_train, eval_set = [(X_test,y_test)], early_stopping_rounds=50, verbose=500)\n",
+        "  LGBM_pred.append(model.predict_proba(X_test)[:,1])\n",
+        "  LGBM_val_pred.append(model.predict_proba(X)[:,1])\n",
+        "  print(str(score(model,X_train, y_train)) + \"    \" + str(score(model,X_test, y_test)))\n",
+        "  scores.append(score(model,X_test, y_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xe9Tf2s7SwBy",
+        "outputId": "a94d9296-3595-4a8c-9a9f-b822058ba8bf"
+      },
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/lightgbm/engine.py:118: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+            "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training until validation scores don't improve for 50 rounds.\n",
+            "Early stopping, best iteration is:\n",
+            "[118]\tvalid_0's auc: 0.817075\n",
+            "0.9759249824689777    0.8170751346207363\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/lightgbm/engine.py:118: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+            "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training until validation scores don't improve for 50 rounds.\n",
+            "Early stopping, best iteration is:\n",
+            "[60]\tvalid_0's auc: 0.848798\n",
+            "0.9448492941857983    0.8487980951676652\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/lightgbm/engine.py:118: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+            "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training until validation scores don't improve for 50 rounds.\n",
+            "Early stopping, best iteration is:\n",
+            "[96]\tvalid_0's auc: 0.806878\n",
+            "0.9671434342510443    0.8068778692656042\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/lightgbm/engine.py:118: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+            "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training until validation scores don't improve for 50 rounds.\n",
+            "Early stopping, best iteration is:\n",
+            "[36]\tvalid_0's auc: 0.825946\n",
+            "0.9329121772005244    0.8259458967677401\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/lightgbm/engine.py:118: UserWarning: Found `num_iterations` in params. Will use it instead of argument\n",
+            "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training until validation scores don't improve for 50 rounds.\n",
+            "Early stopping, best iteration is:\n",
+            "[30]\tvalid_0's auc: 0.797847\n",
+            "0.9313313146101692    0.7978471511228213\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1t2tYDO0YVXs",
+        "outputId": "68357628-8e5c-42a9-cd35-ca765c904ada"
+      },
+      "execution_count": 192,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.8170751346207363,\n",
+              " 0.8487980951676652,\n",
+              " 0.8068778692656042,\n",
+              " 0.8259458967677401,\n",
+              " 0.7978471511228213]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 192
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_pred = model.predict_proba(x_test)[:,1]\n",
+        "submission = pd.DataFrame(test['id'])\n",
+        "submission['Class'] = test_pred\n",
+        "submission.to_csv('submission.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "Goqdps1gYWjJ"
+      },
+      "execution_count": 202,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!kaggle competitions submit -c playground-series-s3e4 -f submission.csv -m '1'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XwPVx0dFY_gY",
+        "outputId": "3b954ead-5b6c-4255-a2ad-f5250266a81e"
+      },
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100% 4.00M/4.00M [00:00<00:00, 7.49MB/s]\n",
+            "400 - Bad Request\n"
           ]
         }
       ]
