--- a/Playground_Series_Season_3,_Episode_4.ipynb
+++ b/Playground_Series_Season_3,_Episode_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGdZkF8CNwkQy9gS1GjBik",
+      "authorship_tag": "ABX9TyPF0JvmLu9XFKulvbtPwIaE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "eXE63rJtmHSX"
+        "id": "eXE63rJtmHSX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "92f69de6-df85-4a6c-89da-77733b381f3a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: kaggle in /usr/local/lib/python3.8/dist-packages (1.5.12)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.8/dist-packages (from kaggle) (2.8.2)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from kaggle) (4.64.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from kaggle) (2.25.1)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.8/dist-packages (from kaggle) (2022.12.7)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.8/dist-packages (from kaggle) (7.0.0)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.8/dist-packages (from kaggle) (1.24.3)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.8/dist-packages (from kaggle) (1.15.0)\n",
+            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.8/dist-packages (from python-slugify->kaggle) (1.3)\n",
+            "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->kaggle) (4.0.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->kaggle) (2.10)\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install kaggle\n",
         "!mkdir ~/.kaggle\n",
@@ -47,10 +70,28 @@
         "!unzip playground-series-s3e4"
       ],
       "metadata": {
-        "id": "BOgNtZdwmqfc"
+        "id": "BOgNtZdwmqfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "28e6e4f6-6db3-4cb8-a530-929e047073ef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading playground-series-s3e4.zip to /content\n",
+            " 74% 62.0M/84.1M [00:00<00:00, 200MB/s]\n",
+            "100% 84.1M/84.1M [00:00<00:00, 205MB/s]\n",
+            "Archive:  playground-series-s3e4.zip\n",
+            "  inflating: sample_submission.csv   \n",
+            "  inflating: test.csv                \n",
+            "  inflating: train.csv               \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -67,7 +108,7 @@
       "metadata": {
         "id": "HRvOJiXgmxsk"
       },
-      "execution_count": 145,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -79,7 +120,7 @@
       "metadata": {
         "id": "uAcBHkfWm2R9"
       },
-      "execution_count": 149,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -95,7 +136,7 @@
         "id": "LKJDqswZm91O",
         "outputId": "766d2b7a-5106-4cc4-b3ff-156afffda9eb"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +431,7 @@
         "id": "fEu4MTZIm_vy",
         "outputId": "203fe758-6918-49f4-b4a5-e7e636a4ede8"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -785,7 +826,7 @@
         "id": "tRi7tGbFAW_6",
         "outputId": "24de383f-c4f6-40d8-87be-35aec1bacdeb"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -811,7 +852,7 @@
         "id": "BuLHqapanI_J",
         "outputId": "8ea82a64-3e11-4abc-e6b4-97df1e890a8f"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +879,7 @@
         "id": "3kYKAvi5_Epp",
         "outputId": "7fd55ddc-e57e-4230-9dc8-bcfca940a196"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,9 +919,9 @@
           "height": 1000
         },
         "id": "khXLhvY_B6wp",
-        "outputId": "e42db2c0-63cf-4203-e797-947eaa4ecd9f"
+        "outputId": "539a0e21-7e1b-4d76-97aa-c8f5403da5d5"
       },
-      "execution_count": 156,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -905,7 +946,7 @@
       "metadata": {
         "id": "bmaMVkKG9GYZ"
       },
-      "execution_count": 157,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -916,7 +957,7 @@
       "metadata": {
         "id": "fMgfrJ5a-f--"
       },
-      "execution_count": 158,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -931,7 +972,7 @@
         "id": "uawr1MHR92j7",
         "outputId": "ef082afe-584a-4b16-a597-379944fc2e08"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +999,7 @@
       "metadata": {
         "id": "_djX4TyX625b"
       },
-      "execution_count": 160,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -975,7 +1016,7 @@
       "metadata": {
         "id": "If916ePd9tKi"
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +1030,7 @@
       "metadata": {
         "id": "pRPee3xbs8zA"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1002,7 +1043,7 @@
       "metadata": {
         "id": "foJA6yEUAy00"
       },
-      "execution_count": 185,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1027,7 +1068,7 @@
       "metadata": {
         "id": "bNctez8yTDuP"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1087,7 @@
         "id": "HcmHZzppOKiN",
         "outputId": "6f658c67-2c5a-4200-bbe3-ebd72a98bc48"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1112,7 @@
         "id": "Gq-KKvtpO8W5",
         "outputId": "7015a31a-11d6-43aa-b2c4-1abb11f4c703"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,7 +1132,7 @@
       "metadata": {
         "id": "0HblY9c5Q8xU"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1105,7 +1146,7 @@
       "metadata": {
         "id": "Z96qMs-1Qejg"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1120,7 +1161,7 @@
         "id": "bm3B8IiWSCsC",
         "outputId": "5579ee23-8bd1-488d-d657-1bd56291254c"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1150,7 +1191,7 @@
       "metadata": {
         "id": "x4sTHZXzQYy3"
       },
-      "execution_count": 183,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1162,7 +1203,7 @@
       "metadata": {
         "id": "Mne-HeZnRFpI"
       },
-      "execution_count": 199,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1174,7 +1215,7 @@
       "metadata": {
         "id": "meQ7ezeQRev0"
       },
-      "execution_count": 200,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1186,7 +1227,7 @@
       "metadata": {
         "id": "xgSNldY-Rw9l"
       },
-      "execution_count": 201,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1197,7 +1238,7 @@
       "metadata": {
         "id": "dDeEpQ4OSiI3"
       },
-      "execution_count": 182,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1209,7 +1250,7 @@
       "metadata": {
         "id": "hb8OXewFT7Ry"
       },
-      "execution_count": 188,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1251,9 +1292,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xe9Tf2s7SwBy",
-        "outputId": "a94d9296-3595-4a8c-9a9f-b822058ba8bf"
+        "outputId": "eb3664f3-584c-4f80-f2bb-e0f8ea5b7f97"
       },
-      "execution_count": 189,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1269,8 +1310,8 @@
           "text": [
             "Training until validation scores don't improve for 50 rounds.\n",
             "Early stopping, best iteration is:\n",
-            "[118]\tvalid_0's auc: 0.817075\n",
-            "0.9759249824689777    0.8170751346207363\n"
+            "[90]\tvalid_0's auc: 0.817024\n",
+            "0.9663215113265647    0.8170242930343621\n"
           ]
         },
         {
@@ -1287,8 +1328,8 @@
           "text": [
             "Training until validation scores don't improve for 50 rounds.\n",
             "Early stopping, best iteration is:\n",
-            "[60]\tvalid_0's auc: 0.848798\n",
-            "0.9448492941857983    0.8487980951676652\n"
+            "[73]\tvalid_0's auc: 0.858938\n",
+            "0.9534995045580656    0.8589381941457739\n"
           ]
         },
         {
@@ -1305,8 +1346,8 @@
           "text": [
             "Training until validation scores don't improve for 50 rounds.\n",
             "Early stopping, best iteration is:\n",
-            "[96]\tvalid_0's auc: 0.806878\n",
-            "0.9671434342510443    0.8068778692656042\n"
+            "[161]\tvalid_0's auc: 0.807206\n",
+            "0.9861641970791791    0.8072055420734804\n"
           ]
         },
         {
@@ -1323,8 +1364,8 @@
           "text": [
             "Training until validation scores don't improve for 50 rounds.\n",
             "Early stopping, best iteration is:\n",
-            "[36]\tvalid_0's auc: 0.825946\n",
-            "0.9329121772005244    0.8259458967677401\n"
+            "[88]\tvalid_0's auc: 0.825416\n",
+            "0.9699688710021647    0.8254155873979034\n"
           ]
         },
         {
@@ -1341,8 +1382,8 @@
           "text": [
             "Training until validation scores don't improve for 50 rounds.\n",
             "Early stopping, best iteration is:\n",
-            "[30]\tvalid_0's auc: 0.797847\n",
-            "0.9313313146101692    0.7978471511228213\n"
+            "[21]\tvalid_0's auc: 0.793872\n",
+            "0.9227226283737894    0.7938716906199933\n"
           ]
         }
       ]
@@ -1357,23 +1398,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1t2tYDO0YVXs",
-        "outputId": "68357628-8e5c-42a9-cd35-ca765c904ada"
+        "outputId": "c3e8ad6f-ac19-4cac-d0cf-c8cdea2fe4c3"
       },
-      "execution_count": 192,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.8170751346207363,\n",
-              " 0.8487980951676652,\n",
-              " 0.8068778692656042,\n",
-              " 0.8259458967677401,\n",
-              " 0.7978471511228213]"
+              "[0.8170242930343621,\n",
+              " 0.8589381941457739,\n",
+              " 0.8072055420734804,\n",
+              " 0.8254155873979034,\n",
+              " 0.7938716906199933]"
             ]
           },
           "metadata": {},
-          "execution_count": 192
+          "execution_count": 18
         }
       ]
     },
@@ -1388,7 +1429,7 @@
       "metadata": {
         "id": "Goqdps1gYWjJ"
       },
-      "execution_count": 202,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1401,16 +1442,133 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XwPVx0dFY_gY",
-        "outputId": "3b954ead-5b6c-4255-a2ad-f5250266a81e"
+        "outputId": "72980f8e-35a4-4f74-86cf-67ec04730a41"
       },
-      "execution_count": 203,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "100% 4.00M/4.00M [00:00<00:00, 7.49MB/s]\n",
-            "400 - Bad Request\n"
+            "100% 4.00M/4.00M [00:00<00:00, 16.4MB/s]\n",
+            "Successfully submitted to Playground Series Season 3, Episode 4"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from xgboost import XGBClassifier"
+      ],
+      "metadata": {
+        "id": "yMD6PUl19M3_"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "XGB_pred = []\n",
+        "XGB_val_pred = []\n",
+        "\n",
+        "xgb_params = {\n",
+        "    'n_estimators':10000,\n",
+        "    'max_depth':5,\n",
+        "    'eval_metric':'auc',\n",
+        "    'early_stopping_rounds': 100,    \n",
+        "    'random_state':55,\n",
+        "    'tree_method': 'gpu_hist'\n",
+        "}\n",
+        "\n",
+        "for train_i, test_i in SKF.split(X, y):\n",
+        "\n",
+        "  X_train, X_test = X[train_i], X[test_i]\n",
+        "  y_train, y_test = y[train_i], y[test_i]\n",
+        "\n",
+        "  model = XGBClassifier(**xgb_params)\n",
+        "  model.fit(X_train,y_train,eval_set=[(X_test,y_test)],verbose=1000)\n",
+        "  XGB_pred.append(model.predict_proba(X_test)[:,1])\n",
+        "  XGB_val_pred.append(model.predict_proba(X)[:,1])\n",
+        "  print(str(score(model,X_train, y_train)) + \"    \" + str(score(model,X_test, y_test)))\n",
+        "  scores.append(score(model,X_test, y_test))"
+      ],
+      "metadata": {
+        "id": "yTt95W1T9Qvd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VaXE2E1e98wy",
+        "outputId": "ea67d831-582e-43b0-b8de-178dc0ba0a71"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.8170242930343621,\n",
+              " 0.8589381941457739,\n",
+              " 0.8072055420734804,\n",
+              " 0.8254155873979034,\n",
+              " 0.7938716906199933,\n",
+              " 0.640183389737492,\n",
+              " 0.5771695004972258,\n",
+              " 0.5770455589266149,\n",
+              " 0.640045825540867,\n",
+              " 0.6784595370236505]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_pred = model.predict_proba(x_test)[:,1]\n",
+        "submission = pd.DataFrame(test['id'])\n",
+        "submission['Class'] = test_pred\n",
+        "submission.to_csv('submission.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "oqDj5LA7_6ib"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!kaggle competitions submit -c playground-series-s3e4 -f submission.csv -m '1'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FwljbOma__Gu",
+        "outputId": "c0a0a26a-39b2-4533-f0eb-f97b6a9f24db"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100% 2.65M/2.65M [00:00<00:00, 10.4MB/s]\n",
+            "Successfully submitted to Playground Series Season 3, Episode 4"
           ]
         }
       ]
